objects/SFDC_520_Quote__c.object
<CustomObject>
    <description>recycled the quoting tool and made in projects-used the functionality to copy the opportunity line items into the Project so everyone could see what was sold.</description>
    <fields>
        <fullName>ATC_Activation_Billing_Link__c</fullName>
        <description>Used by Websites to track the link they will need to click to notify ATC to start billing for this website.</description>
        <inlineHelpText>This is where you can store the link you will use to notify ATC to start billing.</inlineHelpText>
        <label>ATC Activation Billing Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Account_Adwords_ID_s__c</fullName>
        <description>Haystak</description>
        <formula>&quot;ADWORDS ID 1:&quot; &amp; Account__r.Adwords_CID__c &amp; BR()
&amp; &quot;ADWORDS ID 2:&quot; &amp; Account__r.Adwords_CID_2__c &amp; BR()
&amp; &quot;ADWORDS ID 3:&quot; &amp; Account__r.Adwords_CID_3__c &amp; BR()
&amp; &quot;ADWORDS ID 4:&quot; &amp; Account__r.Adwords_CID_4__c &amp; BR()
&amp; &quot;ADWORDS ID 5:&quot; &amp; Account__r.Adwords_CID_5__c</formula>
        <inlineHelpText>read only formula field that reads the adwords id&apos;s from the account.  Updates must be done on the account</inlineHelpText>
        <label>Account Adwords ID&apos;s</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Bing_Ids__c</fullName>
        <formula>&quot;BING ID 1:&quot; &amp; Account__r.Bing_Id_1__c &amp; BR()
&amp; &quot;BING ID 2:&quot; &amp; Account__r.Bing_Id_2__c &amp; BR()
&amp; &quot;BING ID 3:&quot; &amp; Account__r.Bing_Id_3__c &amp; BR()
&amp; &quot;BING ID 4:&quot; &amp; Account__r.Bing_Id_4__c &amp; BR()
&amp; &quot;BING ID 5:&quot; &amp; Account__r.Bing_Id_5__c</formula>
        <inlineHelpText>formula field that displays the Bing Id&apos;s from the Account</inlineHelpText>
        <label>Account Bing Ids</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Id__c</fullName>
        <description>used for data migration</description>
        <formula>Account__r.Id</formula>
        <label>Account Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Manager_ID__c</fullName>
        <formula>Vin_Performance_Manager__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vin Performance Manager ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Manager__c</fullName>
        <description>Vin_Performance_Manager__r.User_Full_Name__c</description>
        <formula>Vin_Performance_Manager__r.User_Full_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Vin_Performance_Manager__r.User_Full_Name__c</inlineHelpText>
        <label>Vin PM (formula)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Paid_Ops_Settings__c</fullName>
        <formula>&quot;SEM COMPETITORS&gt;&gt;&quot; &amp;
  Account__r.Competitors__c  &amp; BR() &amp; &quot; &quot;&amp; BR()&amp;
&quot;SEO COMPETITORS&gt;&gt;&quot; &amp;
  Account__r.SEO_Competitors__c  &amp; BR() &amp; &quot; &quot;&amp; BR()&amp;
&quot;SEM CITIES IN GEO&gt;&gt;&quot;
&amp; Account__r.Cities_in_Geo__c &amp; BR() &amp; &quot; &quot;&amp; BR()&amp;
&quot;SEO CITIES IN GEO&gt;&gt;&quot;
&amp; Account__r.SEO_Cities_in_Geo__c &amp; BR() &amp; &quot; &quot;&amp; BR()&amp;
&quot;ALIAS&gt;&gt;&quot;
 &amp; Account__r.Alias__c &amp; BR() &amp; &quot; &quot;&amp; BR()&amp;
&quot;TAGLINES/SLOGANS/SIGNATURES&gt;&gt;&quot;
 &amp;Account__r.Taglines_Slogan__c</formula>
        <inlineHelpText>formula field that combines the account paid ops fields into 1 field - all fields must be updated on the account</inlineHelpText>
        <label>Paid Ops Account Settings</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Team_Updating__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Account Team Updating</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_Tech_Ops_Settings__c</fullName>
        <description>Haystak</description>
        <formula>&quot;MARCHEX ID&gt;&gt;&quot;&amp;Account__r.Marchex_Id__c
&amp; BR()&amp; &quot; &quot;&amp; BR()&amp; &quot; &quot;&amp;

&quot;KENSHOO TRACKING ID&gt;&gt;&quot; &amp; 
  Account__r.Kenshoo_Tracking_ID__c  
&amp; BR()&amp; &quot; &quot;&amp; BR()&amp; &quot; &quot;&amp;

&quot;CLIENT UA&gt;&gt;&quot; &amp; 
  Account__r.Client_UA_Code__c   
&amp; BR()&amp; &quot; &quot;&amp; BR()&amp; &quot; &quot;&amp;

&quot;HAYSTAK UA&gt;&gt;&quot;&amp;  
 Account__r.Haystak_UA_Code__c 
&amp; BR()&amp; &quot; &quot;&amp; BR()&amp; &quot; &quot;&amp;

&quot;TARGET PHONE#&gt;&gt;&quot; &amp;  
  Account__r.Target_Phone__c 
&amp; BR()&amp; &quot; &quot;&amp; BR()&amp; &quot; &quot;&amp; 

&quot;WEBSITE PROVIDER&gt;&gt;&quot; &amp;  
    Account__r.Website_Provider_Haystak__c   
&amp; BR()&amp; &quot; &quot;&amp; BR()&amp; &quot; &quot;&amp;

&quot;WEBSITE USERNAME&gt;&gt;&gt;&gt;&quot; &amp;  
    Account__r.Website_Provider_Username__c  
&amp; BR()&amp; &quot; &quot;&amp; BR()&amp; &quot; &quot;&amp;

&quot;WEBSITE PASSWORD&gt;&gt;&quot; &amp;  
    Account__r.Website_Provider_Password__c   
&amp; BR()&amp; &quot; &quot;&amp; BR()&amp; &quot; &quot;&amp;
&quot;INVT FEED PROVIDER&gt;&gt;&quot; &amp;  
   Account__r.Inventory_Feed_Provider__c  
&amp; BR()&amp; &quot; &quot;&amp; BR()&amp; &quot; &quot;&amp;
&quot;SALES LEAD EMAIL&gt;&gt;&quot; &amp; 
Account__r.Sales_Lead_Email_Address__c</formula>
        <inlineHelpText>formula field that reads the Tech Op fields from the account</inlineHelpText>
        <label>Tech Ops Account Settings</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Action__c</fullName>
        <formula>TEXT(Opportunity__r.Type)</formula>
        <inlineHelpText>Formula field that reads the field Type from the Opportunity</inlineHelpText>
        <label>Action</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active_Account_to_be_Used__c</fullName>
        <label>Active Account to be Demoed</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active_X_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active X Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Actual_Air__c</fullName>
        <description>The Actual amount spent</description>
        <inlineHelpText>The Actual amount spent</inlineHelpText>
        <label>Actual Air</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Actual_Ground_Trans_Incidentals__c</fullName>
        <inlineHelpText>The Actual amount spent</inlineHelpText>
        <label>Actual Ground Trans/Incidentals</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Actual_Per_Diem__c</fullName>
        <inlineHelpText>The Actual amount spent</inlineHelpText>
        <label>Actual Per Diem</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Actual_Rental_Car__c</fullName>
        <inlineHelpText>The Actual amount spent</inlineHelpText>
        <label>Actual Rental Car</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Actual_Total_Travel_Cost__c</fullName>
        <inlineHelpText>The Actual amount spent</inlineHelpText>
        <label>Actual Total Travel Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Actual__c</fullName>
        <inlineHelpText>The Actual amount spent</inlineHelpText>
        <label>Actual Hotel</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Admin_Settings_Call_Completed__c</fullName>
        <label>Admin Settings Call Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Admin_Settings_Call_Status__c</fullName>
        <formula>IF((TEXT(Admin_Settings_Call_Completed__c)= NULL) &amp;&amp; (Admin_Settings_Goal_Date__c &lt; today()), &quot;Overdue&quot;,
IF((TEXT(Admin_Settings_Call_Completed__c) = NULL) &amp;&amp; (Admin_Settings_Goal_Date__c &lt;= (today()+3)), &quot;Nearing Goal Date&quot;,
IF((TEXT(Admin_Settings_Call_Completed__c) = NULL) &amp;&amp; (Admin_Settings_Goal_Date__c &gt; today()), &quot;Pending&quot;, 
IF(Admin_Settings_Call_Completed__c &lt;= Admin_Settings_Goal_Date__c, &quot;Goal Completed&quot;,
IF(Admin_Settings_Call_Completed__c &gt; Admin_Settings_Goal_Date__c, &quot;Goal Missed&quot;,NULL
)))))</formula>
        <label>Admin Settings Call Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Admin_Settings_Goal_Date__c</fullName>
        <formula>IF(TEXT(Alternate_Start_Date__c) != null, Alternate_Start_Date__c+15, DATEVALUE(CreatedDate)+15)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Auto-calculated by the system by taking the Project Created Date + 15 days.</inlineHelpText>
        <label>Admin Settings Call Goal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Adobe_Reader_Installed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Adobe Reader Installed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Adwords_CID__c</fullName>
        <description>Haystak</description>
        <label>Adwords CID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Adwords_Conversion_ID__c</fullName>
        <description>Haystak</description>
        <label>Adwords Conversion ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Adwords_Conversion_Label__c</fullName>
        <description>Haystak</description>
        <label>Adwords Conversion Label</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Affiliate_Email__c</fullName>
        <inlineHelpText>Copied from the Opportunity when the Project is created. Primarily used for ATC rep information.</inlineHelpText>
        <label>Affiliate Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Agile_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agile Lead</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Projects8</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Air__c</fullName>
        <inlineHelpText>Proposed Air</inlineHelpText>
        <label>Air</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Airport_Distance__c</fullName>
        <label>Airport Distance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Alias__c</fullName>
        <description>Haystak</description>
        <label>Alias</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>All_Requirements_Gathered__c</fullName>
        <label>All Requirements Gathered</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Alternate_Shipping_Address__c</fullName>
        <label>Alternate Shipping Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Alternate_Start_Date__c</fullName>
        <inlineHelpText>Packet Returned Date Override- can only be updated by a manager</inlineHelpText>
        <label>Alternate Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Approval_Contact_Email__c</fullName>
        <formula>Approval_Contact__r.Email</formula>
        <label>Approval Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approval_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The person at the dealer who needs to approve this project</inlineHelpText>
        <label>Approval Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.Business_Unit__c</field>
                <operation>equals</operation>
                <valueField>$User.Business_Unit_for_Contact_Filter__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Projects (Approval Contact)</relationshipLabel>
        <relationshipName>Projects7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approval_Stage__c</fullName>
        <inlineHelpText>Updated by the system upon milestone completion</inlineHelpText>
        <label>Stage</label>
        <picklist>
            <picklistValues>
                <fullName>1-Initiating</fullName>
                <color>#FFFF66</color>
            </picklistValues>
            <picklistValues>
                <fullName>2-Planning and Design</fullName>
                <color>#FFCC66</color>
            </picklistValues>
            <picklistValues>
                <fullName>3-Executing</fullName>
                <color>#FF6600</color>
            </picklistValues>
            <picklistValues>
                <fullName>4-Review</fullName>
                <color>#33CCFF</color>
            </picklistValues>
            <picklistValues>
                <fullName>5-Finalizing</fullName>
                <color>#66FF99</color>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed - Launched</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
                <color>#009900</color>
            </picklistValues>
            <picklistValues>
                <fullName>Configuration-CRM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Configuration-ILM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Configuration-Inventory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Verification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Loading</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DMS Access</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finalization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Final Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GO LIVE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Implementation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incomplete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Integration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Integration Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Introduction</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>No Launch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending AM Intro Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending AM Strategy Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Cancellation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Dealer Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Launch</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Approval_To_Intro__c</fullName>
        <description>For Reports to calculate number of days</description>
        <formula>Date_Intro_Call_Complete__c - DATEVALUE( CreatedDate )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approval To Intro</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Assessment_Returned__c</fullName>
        <label>Assessment Packet Returned</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Assessment_Sent__c</fullName>
        <label>Assessment Packet Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Asset_Count__c</fullName>
        <label>Asset Count</label>
        <summaryForeignKey>SFDC_520_QuoteLine__c.Quote__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Assigned_Specialist__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Implementation Project Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Attempted_Contact_Date__c</fullName>
        <label>Date Contact Attempted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Audit_Notes__c</fullName>
        <inlineHelpText>used for auditing projects</inlineHelpText>
        <label>Audit Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Autofollow__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Autofollow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Autounfollow__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Autounfollow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Available_exclusively_for_training__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Available exclusively for training?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Billed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>updated by Accounting when the first invoice is generated from a Project that is in the stage &quot;Go Live&apos; or &quot;Billable-Not Completed&quot;</inlineHelpText>
        <label>Billed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Billing_Notes__c</fullName>
        <label>Billing Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Bing_ID__c</fullName>
        <description>Used by Haystak</description>
        <inlineHelpText>Dealer&apos;s Bing ID</inlineHelpText>
        <label>Bing ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Build_Executed_Websites__c</fullName>
        <description>Used on the Kore360 Websites record type.</description>
        <label>Build Executed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Build_Requested_Websites__c</fullName>
        <description>Used on the Kore360 Websites record type.</description>
        <label>Build Requested</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Build_Type__c</fullName>
        <label>IMP Build Type</label>
        <picklist>
            <picklistValues>
                <fullName>3rd Party Buy/Sell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Split</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multiples in One</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Account</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>New Point</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upgrade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vin to Vin Buy/Sell</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Business_Issue_Opportunity_del__c</fullName>
        <inlineHelpText>description of the background context of the project and why it is necessary</inlineHelpText>
        <label>Business Issue/Opportunity</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Business_Need_Definition__c</fullName>
        <inlineHelpText>describe the business unit requiring the project</inlineHelpText>
        <label>Business Need Definition</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <formula>CASE(
   RecordType.DeveloperName,
   &quot;Haystak&quot;, &quot;Haystak&quot;,
   &quot;vAuto&quot;, &quot;vAuto&quot;,
   &quot;VinSolutions&quot;
)</formula>
        <inlineHelpText>Which BU is responsible for this record. Defined by Project Record Type.</inlineHelpText>
        <label>Business Unit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Completed__c</fullName>
        <label>CRM Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CRM_ILM_Verified_Complete__c</fullName>
        <label>CRM/ILM Verified Complete</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>CRM_Status__c</fullName>
        <formula>IF(Project_Type__c == &apos;CRM&apos;, 
IF((TEXT( CRM_Completed__c )= NULL) &amp;&amp; (Phase_5_Goal_Date__c &lt; today()), &quot;CRM Overdue&quot;, 
IF((TEXT( CRM_Completed__c ) = NULL) &amp;&amp; (Phase_5_Goal_Date__c &lt;= (today()+5)), &quot;Nearing CRM Goal Date&quot;, 
IF((TEXT(CRM_Completed__c) = NULL) &amp;&amp; (Phase_5_Goal_Date__c &gt; today()), &quot;Pending CRM&quot;, 
IF(CRM_Completed__c &lt;= Phase_5_Goal_Date__c, &quot;Goal Completed&quot;, 
IF(CRM_Completed__c &gt; Phase_5_Goal_Date__c, &quot;Goal Missed&quot;,NULL 
))))), Null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CRM Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_System__c</fullName>
        <formula>TEXT( Account__r.CRM__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CRM System</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Verifed__c</fullName>
        <label>CRM Verifed</label>
        <picklist>
            <picklistValues>
                <fullName>YES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WON&apos;T HAVE</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>CSR_Notes__c</fullName>
        <label>CSR Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Campaign_Details__c</fullName>
        <formula>&quot;# of Pieces&quot; &amp; TEXT(Opportunity__r.of_Pieces__c ) &amp;&quot;Type&quot; &amp;Opportunity__r.Campaign_Type__c</formula>
        <inlineHelpText>formula field that reads the # of Pieces and Campaign type from the Opportunity</inlineHelpText>
        <label>Campaign Details</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_End_Date__c</fullName>
        <formula>Opportunity__r.Campaign_End_Date__c</formula>
        <inlineHelpText>Updated by a formula that reads the field contents from the same Opportunity field</inlineHelpText>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Campaign_Start_Date__c</fullName>
        <formula>Opportunity__r.Campaign_Start_Date__c</formula>
        <inlineHelpText>updated by a formula that reads the Campaign Start Date from the Opportunity</inlineHelpText>
        <label>In Home Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Change_Management_Process__c</fullName>
        <inlineHelpText>Define the process</inlineHelpText>
        <label>Change Management Process</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Check_Out__c</fullName>
        <formula>IF(CRM_Completed__c =  Project_Complete_Date__c , &quot;Match&quot;, &quot;Unmatched&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Check Out</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cities_in_GEO__c</fullName>
        <description>Haystak</description>
        <label>Cities in GEO</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Client_UA_Code__c</fullName>
        <description>Haystak</description>
        <label>Client UA Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Communication_Reporting_Process__c</fullName>
        <label>Communication &amp; Reporting Process</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Competitor_Strategy__c</fullName>
        <description>Haystak</description>
        <label>Haystak Competitors</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Competitors__c</fullName>
        <description>Haystak</description>
        <label>Competitors</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Completion_Status__c</fullName>
        <formula>IF(
   ISBLANK( Project_Complete_Date__c ),
   &quot;Pending&quot;,
   IF(
      Project_Complete_Date__c &lt; Project_Due_Date__c , &quot;OnTime&quot;,&quot;Goal Missed&quot; )
)</formula>
        <inlineHelpText>if the project complete date is less than the project due date then the project was completed &quot;Ontime&quot;, else &quot;Goal Missed&quot;</inlineHelpText>
        <label>Completion Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Confirmed_Training_End__c</fullName>
        <label>Training End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Confirmed_Training_Start__c</fullName>
        <label>Training Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Conquest_Activation_Date__c</fullName>
        <formula>Account__r.Conquest_Activation_Date__c</formula>
        <inlineHelpText>formula field that reads the Conquest Activation Date from the account</inlineHelpText>
        <label>Conquest Activation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Conquest_Type__c</fullName>
        <formula>TEXT(Account__r.vAuto_Conquest_type__c)</formula>
        <label>Conquest Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_First_Name_Only__c</fullName>
        <formula>Contact__r.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact First Name Only</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Made__c</fullName>
        <label>Introduction Call Made</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.Business_Unit__c</field>
                <operation>equals</operation>
                <valueField>$User.Business_Unit_for_Contact_Filter__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Projects (Contact)</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Conversion_Type__c</fullName>
        <description>Workflow sets this field from a Closed/Won VinSolutions Opportunity when either the Lead Source or Secondary Lead Source = DT/DDC Conversion or DT/DDC Conversion - New Customer.</description>
        <formula>TEXT(Account__r.Conversion_Type__c)</formula>
        <inlineHelpText>Workflow sets this field from a Closed/Won VinSolutions Opportunity when either the Lead Source or Secondary Lead Source = DT/DDC Conversion or DT/DDC Conversion - New Customer.</inlineHelpText>
        <label>Conversion Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Correction_Executed_Websites__c</fullName>
        <description>Used on the Kore360 Websites record type.</description>
        <label>Correction Executed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Create_to_Proposed_Train_Start_Days__c</fullName>
        <formula>Proposed_Training_Start__c - DATEVALUE(CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Create to Proposed Train Start Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Create_to_Train_Days__c</fullName>
        <formula>Confirmed_Training_End__c -  DATEVALUE(CreatedDate)</formula>
        <inlineHelpText>formula field that calculates the days between the project created date and the project confirmed training end date</inlineHelpText>
        <label>Create to Train Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Created_Date_Time__c</fullName>
        <description>Used for reports, as Created Date only shows the date in reports, and not the date/time.</description>
        <formula>CreatedDate</formula>
        <label>Created Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Created_Day__c</fullName>
        <formula>CASE( MOD(DATEVALUE(CreatedDate) - DATE(1900, 1, 7), 7), 
0, &quot;Sunday&quot;, 
1, &quot;Monday&quot;, 
2, &quot;Tuesday&quot;, 
3, &quot;Wednesday&quot;, 
4, &quot;Thursday&quot;, 
5, &quot;Friday&quot;, 
6, &quot;Saturday&quot;, 
&quot;Error&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created Day</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CutOffDate__c</fullName>
        <formula>( Confirmed_Training_Start__c  +(6-MOD(    Confirmed_Training_Start__c   - DATE(1900, 1, 6), 7)))-14</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>refers to the scheduling of training</inlineHelpText>
        <label>Cut-Off Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DDM_Finalization_Complete__c</fullName>
        <label>Acct Mgr Finalization Complete</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DMS_Access_Obtained_Goal_Date__c</fullName>
        <formula>IF(TEXT(Alternate_Start_Date__c) != null, Alternate_Start_Date__c+19, DATEVALUE(CreatedDate)+19)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Auto-calculated by the system by taking the Project Created Date + 19 days.</inlineHelpText>
        <label>DMS Access Obtained Goal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DMS_Access_Obtained_Status__c</fullName>
        <formula>IF((TEXT(DMS_Access_Obtained__c)= NULL) &amp;&amp; (DMS_Access_Obtained_Goal_Date__c&lt; today()), 
&quot;Overdue&quot;,

IF((TEXT(DMS_Access_Obtained__c) = NULL) &amp;&amp; (DMS_Access_Obtained_Goal_Date__c&lt;= (today()+3)),
 &quot;Nearing Goal Date&quot;,

IF((TEXT(DMS_Access_Obtained__c) = NULL) &amp;&amp; (DMS_Access_Obtained_Goal_Date__c&gt; today()), 
&quot;Pending&quot;, 

IF(DMS_Access_Obtained__c&lt;= DMS_Access_Obtained_Goal_Date__c, 
&quot;Goal Completed&quot;,

IF(DMS_Access_Obtained__c&gt; DMS_Access_Obtained_Goal_Date__c, 
&quot;Goal Missed&quot;,NULL
)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DMS Access Obtained Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMS_Access_Obtained__c</fullName>
        <label>DMS Access Obtained</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DMS_Accessed__c</fullName>
        <inlineHelpText>Date the DMS was accessed-automatically updated by a trigger when a user updates Milestone 1 on the Data Integration project piece</inlineHelpText>
        <label>DMS Accessed</label>
        <type>Date</type>
    </fields>
</CustomObject>